      fixes a race condition cloning stacked branches that would cause
      plugins to have hooks called on non-stacked instances.
      (Robert Collins, #334187)

    * ``BzrDirFormat.__str__`` now uses the human readable description
      rather than the sometimes-absent disk label. (Robert Collins)

    * ``bzrlib.fetch`` is now composed of a sender and a sink component
      allowing for decoupling over a network connection. Fetching into
      a RemoteRepository uses this to stream the operation.
      (Andrew Bennetts, Robert Collins)

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * New branch method ``create_clone_on_transport`` that returns a
      branch object. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from
      it), without overriding the command. (Robert Collins)

    * New version of the ``BzrDir.find_repository`` verb supporting
      ``_network_name`` to support removing more _ensure_real calls.
      (Robert Collins)

    * ``RemoteBranchFormat`` no longer claims to have a disk format string.
      (Robert Collins)

    * ``Repository`` objects now have ``suspend_write_group`` and
      ``resume_write_group`` methods.  These are currently only useful
      with pack repositories. (Andrew Bennetts, Robert Collins)

    * ``RepositoryFormat`` objects now have a ``network_name`` for passing
      the format across RPC calls. (Robert Collins, Andrew Bennetts)

    * ``RepositoryFormat`` objects now all have a new attribute
      ``_serializer`` used by fetch when reserialising is required.
      (Robert Collins, Andrew Bennetts)

    * Some methods have been pulled up from ``BzrBranch`` to ``Branch``
      to aid branch types that are not bzr branch objects (like
      RemoteBranch). (Robert Collins, Andrew Bennetts)
